<resources>
    <string name="app_name">Batterie LiTime</string>
    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="nav_header_title">Batterie LiTime </string>
    <string name="nav_header_subtitle">État en temps réel</string>
    <string name="nav_header_desc">En-tête de navigation</string>
    <string name="action_settings">Paramètres</string>

    <string name="menu_transform">Batterie LiTime</string>
    <string name="menu_reflow">Historique</string>
    <string name="menu_slideshow">Graphiques</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_clear_data">Effacer les données</string>

    <string name="title_status">État de la batterie LiTime</string>
    <string name="btn_search">Rechercher batterie</string>
    <string name="btn_stop_search">Arrêter la recherche</string>
    <string name="label_charge_level">Niveau de Charge</string>
    <string name="hint_watts">Puissance (Watts)</string>
    <string name="hint_temp">Température</string>
    <string name="hint_volt_curr">Tension / Courant</string>
    <string name="hint_cells">Tension des Cellules / État</string>

    <string name="widget_graph_description">Graphique de l\'historique des tensions</string>
    <string name="fab_content_description">Action</string>

    <string name="widget_x_axis_start">0h</string>
    <string name="widget_x_axis_end">200h</string>
</resources>
